--- a/ChurchResourceManagerWeb/Views/Reporting/TithingReport.cshtml
+++ b/ChurchResourceManagerWeb/Views/Reporting/TithingReport.cshtml
@@ -1,15 +1,23 @@
 ﻿<page-header page-title="Tithing Report"></page-header>
 
-<div ng-controller="tithesReportingController as trc">
-    <reporting-tabs report-type="Tithing" go-button="trc.getTithingActivity(searchType, startDate, endDate, familyId, memberId)" no-results-found="trc.noResults"></reporting-tabs>
+<div class="row">
+    <div class="col-md-12">
+        <div ng-controller="tithesReportingController as trc">
+            <div class="col-md-12">
+                <reporting-tabs report-type="Tithing" go-button="trc.getTithingActivity(searchType, startDate, endDate, familyId, memberId)" no-results-found="trc.noResults"></reporting-tabs>
+            </div>
 
-    <div ng-show="trc.tithingActivity.length > 0">
-        <tithing-activity panel-settings="trc.tithingActivityPanelSettings"
-                          tithing-activity="trc.tithingActivity"
-                          open-edit-modal="tc.openEditTitheModal(tithe, index, grid)"
-                          open-delete-modal="tc.openDeleteTitheModal(titheId, memberId)"
-                          include-date-column="true"
-                          show-edit-delete="false">
-        </tithing-activity>
+            <running-totals running-total="trc.runningTotal"></running-totals>
+
+                <div ng-show="trc.tithingActivity.length > 0">
+                    <tithing-activity panel-settings="trc.tithingActivityPanelSettings"
+                                      tithing-activity="trc.tithingActivity"
+                                      open-edit-modal="tc.openEditTitheModal(tithe, index, grid)"
+                                      open-delete-modal="tc.openDeleteTitheModal(titheId, memberId)"
+                                      include-date-column="true"
+                                      show-edit-delete="false">
+                    </tithing-activity>
+                </div>
+        </div>
     </div>
 </div>
