--- a/ChurchResourceManagerWeb/Views/Shared/_runningTotals.cshtml
+++ b/ChurchResourceManagerWeb/Views/Shared/_runningTotals.cshtml
@@ -1,14 +1,18 @@
-﻿<!--Running Total-->
-<div class="col-xs-2">
-    <div class="panel panel-default">
-        <div class="panel-heading">
-            Today's Total
-            @*<span class="glyphicon glyphicon-refresh clickable pull-right" ng-click="tc.getTithesRunningTotal()"></span>*@
-        </div>
-        <div class="panel-body">
-            @*// TODO: I need to look into how to make this thing shrink somehow based on the content*@
-            <div class="text-success text-center">
-                <h3>{{rtc.runningTotal.data | currency}}</h3>
+﻿<div class="row">
+    <div class="col-xs-2">
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <div class="row">
+                    <div class="col-xs-3">
+                        <i class="fa fa-money fa-4x text-success"></i>
+                    </div>
+                    <div class="col-xs-9 text-center text-success">
+                        <div style="font-size: 30px;">Totals</div>
+                        <div style="font-size: 30px;">
+                            {{rtc.runningTotal.data | currency}}
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
