--- a/ChurchResourceManagerWeb/Views/Tithing/TithesSearch.cshtml
+++ b/ChurchResourceManagerWeb/Views/Tithing/TithesSearch.cshtml
@@ -7,6 +7,7 @@
                       tithing-activity="tc.tithingActivity"
                       open-edit-modal="tc.openEditTitheModal(tithe, index, grid)"
                       open-delete-modal="tc.openDeleteTitheModal(titheId, memberId)"
-                      include-date-column="true">
+                      include-date-column="true"
+                      show-edit-delete="true">
     </tithing-activity>
 </div>
