Added Membership Report

--- a/ChurchResourceManagerWeb/Views/Membership/MembersSearch.cshtml
+++ b/ChurchResourceManagerWeb/Views/Membership/MembersSearch.cshtml
@@ -1,6 +1,6 @@
 ﻿<page-header page-title="Members Search"></page-header>
 
 <div ng-controller="membershipController as mc">
-    <members-grid open-edit-modal="mc.openEditMembershipModal(member)" get-member-search-data="mc.getMemberSearch()" members="mc.members"></members-grid>
+    <members-grid open-edit-modal="mc.openEditMembershipModal(member)" get-member-search-data="mc.getMemberSearch()" members="mc.members" show-edit-delete="true"></members-grid>
 </div>
 
