--- a/ChurchResourceManagerWeb/Views/Membership/_membersGrid.cshtml
+++ b/ChurchResourceManagerWeb/Views/Membership/_membersGrid.cshtml
@@ -13,7 +13,7 @@
                             <th>Date of Birth</th>
                             <th>Gender</th>
                             <th>Membership Status</th>
-                            <th width="3%"></th> <!--empty space for edit/delete-->
+                            <th ng-show="mgc.showEditDelete === 'true'" width="3%"></th> <!--empty space for edit/delete-->
                         </tr>
                         <tr class="list-group" id="searchRow" name="searchRow">
                             <td>
@@ -52,7 +52,7 @@
                             <td>{{member.Dob}}</td>
                             <td class="text-center">{{member.Gender}}</td>
                             <td>{{member.MembershipStatus}}</td>
-                            <td>
+                            <td ng-show="mgc.shoEditDelete === 'true'">
                                 <span ng-click="mgc.edit(member)" uib-tooltip="Click to Edit" class="glyphicon glyphicon-pencil clickable"></span>
                                 @*|*@
                                 @*<span ng-click="mgc.deleteMember(offering.OfferingId)" uib-tooltip="Click to Delete" class="glyphicon glyphicon-remove clickable"></span>*@
