--- a/ChurchResourceManagerWeb/Views/Membership/_membersGrid.cshtml
+++ b/ChurchResourceManagerWeb/Views/Membership/_membersGrid.cshtml
@@ -52,7 +52,7 @@
                             <td>{{member.Dob}}</td>
                             <td class="text-center">{{member.Gender}}</td>
                             <td>{{member.MembershipStatus}}</td>
-                            <td ng-show="mgc.shoEditDelete === 'true'">
+                            <td ng-show="mgc.showEditDelete === 'true'">
                                 <span ng-click="mgc.edit(member)" uib-tooltip="Click to Edit" class="glyphicon glyphicon-pencil clickable"></span>
                                 @*|*@
                                 @*<span ng-click="mgc.deleteMember(offering.OfferingId)" uib-tooltip="Click to Delete" class="glyphicon glyphicon-remove clickable"></span>*@
