--- a/ChurchResourceManagerWeb/Views/Offerings/OfferingsSearch.cshtml
+++ b/ChurchResourceManagerWeb/Views/Offerings/OfferingsSearch.cshtml
@@ -7,6 +7,8 @@
                        offering-activity="oc.offeringActivity"
                        open-edit-modal="oc.openEditOfferingModal(offering, index)"
                        open-delete-modal="oc.openDeleteOfferingModal(offeringId)"
-                       include-date-column="true"></offering-activity>
+                       include-date-column="true"
+                       show-edit-delete="false">
+    </offering-activity>
 </div>
 
