--- a/ChurchResourceManagerWeb/Views/Reporting/MembershipReport.cshtml
+++ b/ChurchResourceManagerWeb/Views/Reporting/MembershipReport.cshtml
@@ -6,7 +6,7 @@
 <div class="row">
     <div class="col-md-12">
         <div ng-controller="membershipReportingController as mrc">
-            <reporting-tabs report-type="Membership" go-button="mrc.getMembership(searchType, startDate, endDate, familyId, memberId)" no-results-found="mrc.noResults"></reporting-tabs>
+            <reporting-tabs report-type="Membership" go-button="mrc.getMembership(searchType, startDate, endDate, familyId, memberId)" no-results-found="mrc.noResults" reset-tabs="mrc.reset()"></reporting-tabs>
 
             <membership-stat-cards total-count="mrc.totalCount" active-count="mrc.activeCount" terminated-count="mrc.terminatedCount" no-results-found="mrc.noResults"></membership-stat-cards>
 
