Fixed On Add Relative and Save

--- a/ChurchResourceManagerWeb/Views/Membership/_editMembershipModal.cshtml
+++ b/ChurchResourceManagerWeb/Views/Membership/_editMembershipModal.cshtml
@@ -18,7 +18,8 @@
                            state-list="emc.stateList"
                            on-find-active-index="emc.findActiveIndex(currentIndex, arrayCount)"
                            is-edit-mode="true"
-                           enable-disable-contact-info="emc.enableDisableContactInfo(info)">
+                           enable-disable-contact-info="emc.enableDisableContactInfo(info)"
+                           on-add-relative="emc.addRelative()">
 
         </manage-membership>
     </div>
