--- a/ChurchResourceManagerWeb/Views/Membership/_memberInformation.cshtml
+++ b/ChurchResourceManagerWeb/Views/Membership/_memberInformation.cshtml
@@ -21,7 +21,7 @@
                                             </div>
                                             <div class="form-group" ng-class="{'has-error' : memberInfoForm.ddlRelationshipTypes.$invalid && memberInfoForm.ddlRelationshipTypes.$touched}">
                                                 <label for="ddlRelationshipTypes">Relation</label>
-                                                <select id="ddlRelationshipTypes" name="ddlRelationshipTypes" class="form-control" ng-model="mic.memberInfoArray[$index].SelectedRelationshipType" ng-options="r.Description for r in mic.enums.relationshipTypes" required equal-with-hoh="mic.memberInfoArray"></select>
+                                                <select id="ddlRelationshipTypes" name="ddlRelationshipTypes" class="form-control" ng-model="mic.memberInfoArray[$index].SelectedRelationshipType" ng-options="r.Description for r in mic.enums.relationshipTypes" required @*equal-with-hoh="mic.memberInfoArray"*@></select>
                                                 <div class="help-block-error" ng-messages="memberInfoForm.ddlRelationshipTypes.$error" ng-if="memberInfoForm.ddlRelationshipTypes.$touched">
                                                     <div ng-messages-include="message-template"></div>
                                                 </div>
@@ -89,7 +89,7 @@
                                         </div>
                                     </div>
                                     <div style="margin-top: 1%;">
-                                        <button ng-if="mic.followLastCurrentActiveIndex($index, mic.memberInfoArray.length)" type="button" class="btn btn-success" ng-click="mic.onAddRelative()">
+                                        <button ng-if="mic.followLastCurrentActiveIndex($index, mic.memberInfoArray.length)" type="button" class="btn btn-success" ng-click="mic.doAddRelative()">
                                             <span class="glyphicon glyphicon-plus"></span> Add More
                                         </button>
                                         <button ng-if="$index > 0" type="button" class="btn btn-danger" ng-click="mic.onRemoveRelative($index)">
