Changed Auth and Added font awesome cdn

--- a/ChurchResourceManagerWeb/Views/Dashboard/_dashboard.cshtml
+++ b/ChurchResourceManagerWeb/Views/Dashboard/_dashboard.cshtml
@@ -35,7 +35,7 @@
             <div class="panel-heading">
                 <div class="row">
                     <div class="col-xs-3">
-                        <i class="fa fa-money fa-5x"></i>
+                        <i class="fas fa-money-bill-alt fa-5x"></i>
                     </div>
                     <div class="col-xs-9 text-right">
                         <div class="huge">{{dc.tithesSum | currency}}</div>
@@ -59,7 +59,7 @@
             <div class="panel-heading">
                 <div class="row">
                     <div class="col-xs-3">
-                        <i class="fa fa-dollar fa-5x"></i>
+                        <i class="fas fa-dollar-sign fa-5x"></i>
                     </div>
                     <div class="col-xs-9 text-right">
                         <div class="huge">{{dc.offeringsSum | currency}}</div>
@@ -82,7 +82,7 @@
             <div class="panel-heading">
                 <div class="row">
                     <div class="col-xs-3">
-                        <i class="fa fa-bank fa-5x"></i>
+                        <i class="fas fa-university fa-5x"></i>
                     </div>
                     <div class="col-xs-9 text-right">
                         <div class="huge">{{dc.expensesSum | currency}}</div>
