--- a/ChurchResourceManagerWeb/Views/Shared/_NavBar.cshtml
+++ b/ChurchResourceManagerWeb/Views/Shared/_NavBar.cshtml
@@ -54,7 +54,7 @@
                     </li>
                     <li ng-click="hc.activateDeactivateParent('ManageTithes')">
                         <a ng-href="#">
-                            <i class="fa fa-money fa-fw"></i>
+                            <i class="fas fa-money-bill-alt fa-fw"></i>
                             Manage Tithes<span class="arrow" ng-class="{'fa fa-angle-down': hc.isActiveParentNav('ManageTithes'), 'fa fa-angle-left': !hc.isActiveParentNav('ManageTithes')}"></span>
                         </a>
                         <ul ng-show="hc.openCloseNav('Tithing/') || hc.isActiveParentNav('ManageTithes')" class="nav nav-second-level">
@@ -68,7 +68,7 @@
                     </li>
                     <li ng-click="hc.activateDeactivateParent('ManageOfferings')">
                         <a ng-href="#">
-                            <i class="fa fa-dollar fa-fw"></i>
+                            <i class="fas fa-dollar-sign fa-fw"></i>
                             Manage Offerings<span class="arrow" ng-class="{'fa fa-angle-down': hc.isActiveParentNav('ManageOfferings'), 'fa fa-angle-left': !hc.isActiveParentNav('ManageOfferings')}"></span>
                         </a>
                         <ul ng-show="hc.openCloseNav('Offerings/') || hc.isActiveParentNav('ManageOfferings')" class="nav nav-second-level">
@@ -82,7 +82,7 @@
                     </li>
                     <li ng-click="hc.activateDeactivateParent('ManageTransactions')">
                         <a ng-href="#">
-                            <i class="fa fa-bank fa-fw"></i>
+                            <i class="fas fa-university fa-fw"></i>
                             Manage Transactions<span class="arrow" ng-class="{'fa fa-angle-down': hc.isActiveParentNav('ManageTransactions'), 'fa fa-angle-left': !hc.isActiveParentNav('ManageTransactions')}"></span>
                         </a>
                         <ul ng-show="hc.openCloseNav('Transactions/') || hc.isActiveParentNav('ManageTransactions')" class="nav nav-second-level">
