--- a/ChurchResourceManagerWeb/Views/Shared/_runningTotals.cshtml
+++ b/ChurchResourceManagerWeb/Views/Shared/_runningTotals.cshtml
@@ -4,7 +4,7 @@
             <div class="panel-heading">
                 <div class="row">
                     <div class="col-xs-3">
-                        <i class="fa fa-money fa-4x text-success"></i>
+                        <i class="fas fa-money-bill-alt fa-4x text-success"></i>
                     </div>
                     <div class="col-xs-9 text-center text-success">
                         <div style="font-size: 30px;">Totals</div>
