--- a/ChurchResourceManagerWeb/Views/Transactions/_submitTransaction.cshtml
+++ b/ChurchResourceManagerWeb/Views/Transactions/_submitTransaction.cshtml
@@ -1,11 +1,20 @@
 ﻿<div class="row">
     <form id="stc.transactionsForm" name="stc.transactionsForm" novalidate ng-submit="stc.submit(stc.transaction, stc.transactionsForm)" autocomplete="off">
-        <!--Transaction Type-->
         <div class="col-xs-12">
+            <!--Transaction Type-->
             <div class="form-group">
                 <label for="ddlTransactionType">Transaction Type</label>
                 <select id="ddlTransactionType" name="ddlTransactionType" class="form-control" ng-model="stc.transaction.SelectedTransactionType" ng-options="t.Description for t in stc.enums.TransactionTypes" required></select>
                 <div class="help-block-error" ng-messages="stc.transactionsForm.ddlTransactionType.$error" ng-if="stc.transactionsForm.ddlTransactionType.$touched">
+                    <div ng-messages-include="message-template"></div>
+                </div>
+            </div>
+
+            <!--Payment Account-->
+            <div class="form-group">
+                <label for="ddlPaymentAccounts">Payment Account</label>
+                <select id="ddlPaymentAccounts" name="ddlPaymentAccounts" class="form-control" ng-model="stc.transaction.SelectedPaymentAccount" ng-options="t.PaymentAccount for t in stc.enums.PaymentAccounts" required></select>
+                <div class="help-block-error" ng-messages="stc.transactionsForm.ddlPaymentAccounts.$error" ng-if="stc.transactionsForm.ddlPaymentAccounts.$touched">
                     <div ng-messages-include="message-template"></div>
                 </div>
             </div>
@@ -27,7 +36,7 @@
                     <div ng-messages-include="message-template"></div>
                 </div>
             </div>
-            
+
             <!--Transaction Amount-->
             <div class="form-group">
                 <label for="amountTxtBx">Amount</label>
